Fixed relative urls

--- a/UserInterface/index.html
+++ b/UserInterface/index.html
@@ -45,10 +45,10 @@
         <div class="vert-text">
             <div class="row">
                 <div class="col-md-2 col-md-offset-4">
-                    <img src="../img/bbc-logo.png">
+                    <img src="img/bbc-logo.png">
                 </div>
                 <div class="col-md-2">
-                    <img src="../img/ucl-logo-transparent-small.png">
+                    <img src="img/ucl-logo-transparent-small.png">
                 </div>
             </div>
             <h1>Politics Mapper</h1>
@@ -125,7 +125,7 @@
     <!-- Callout -->
     <div class="callout">
         <div class="vert-text">
-            <img src="../img/ucl-eng-logo-long-orange.png" width="60%">
+            <img src="img/ucl-eng-logo-long-orange.png" width="60%">
             
         </div>
     </div>
