--- a/UserInterface/index.html
+++ b/UserInterface/index.html
@@ -24,7 +24,7 @@
     <div id="sidebar-wrapper">
         <ul class="sidebar-nav">
             <a id="menu-close" href="#" class="btn btn-default btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
-            <li class="sidebar-brand"><a href="http://startbootstrap.com">Start Bootstrap</a>
+            <li class="sidebar-brand"><a href="index.html">Politics Mapper</a>
             </li>
             <li><a href="#top">Home</a>
             </li>
@@ -32,9 +32,9 @@
             </li>
             <li><a href="#services">Our Team</a>
             </li>
-            <li><a href="#portfolio">Our Blogs</a>
+            <li><a href="#blogs">Our Blogs</a>
             </li>
-            <li><a href="#contact">Contact</a>
+            <li><a href="#something-else">Something Else?</a>
             </li>
         </ul>
     </div>
@@ -59,7 +59,7 @@
                     <div class="input-group">
                         <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term">
                         <div class="input-group-btn">
-                            <button onclick="location.href='search.html';" class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                            <button onclick="location.href='search.html#results';" class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
                         </div>
                     </div>
                 </div>
@@ -131,8 +131,8 @@
     </div>
     <!-- /Callout -->
 
-    <!-- Portfolio -->
-    <div id="portfolio" class="portfolio">
+    <!-- Blogs -->
+    <div id="blogs" class="portfolio">
         <div class="container">
             <div class="row">
                 <div class="col-md-4 col-md-offset-4 text-center">
@@ -150,7 +150,7 @@
                 </div>
                 <div class="col-md-4 text-center">
                     <div class="portfolio-item">
-                        <iframe width="100%" height="275" src="http://reecedoylecomp2013.wordpress.com" frameborder="0">
+                        <iframe width="100%" height="275" src="http://anuzadhikari12.wordpress.com" frameborder="0">
                         </iframe>
                         <h4>Anuz's Blog</h4><hr>
                     </div>
@@ -164,7 +164,7 @@
                 </div>
                 <div class="col-md-4 text-center">
                     <div class="portfolio-item">
-                        <iframe width="100%" height="275" src="http://reecedoylecomp2013.wordpress.com" frameborder="0">
+                        <iframe width="100%" height="275" src="http://esbensorig.wordpress.com/" frameborder="0">
                         </iframe>
                         <h4>Esben's Blog</h4><hr>
                     </div>
@@ -175,54 +175,27 @@
     <!-- /Portfolio -->
 
     <!-- Call to Action -->
-    <div class="call-to-action">
+    <div id="something-else" class="call-to-action">
         <div class="container">
             <div class="row">
                 <div class="col-md-6 col-md-offset-3 text-center">
                     <h3>Looking for something else?</h3>
-                    <a href="#" class="btn btn-lg btn-default">Categories</a>
-                    <a href="#" class="btn btn-lg btn-default">Timeline</a>
-                    <a href="#" class="btn btn-lg btn-primary">Help</a>
+                    <a href="#" class="btn btn-lg btn-primary">Categories</a>
+                    <a href="#" class="btn btn-lg btn-success">Timeline</a>
+                    <a href="#" class="btn btn-lg btn-info">Help</a>
+                    <a href="#" class="btn btn-lg btn-warning">UCL Engineering</a>
+                    <a href="#" class="btn btn-lg btn-danger">BBC Politics</a>
+                </div>
+                <div class="col-md-8 col-md-offset-2 text-center">
+                    <hr>
+                    <script>
+                        document.write("Last Modified: " + document.lastModified);
+                    </script>
                 </div>
             </div>
         </div>
     </div>
     <!-- /Call to Action -->
-
-    <!-- Map -->
-    <div id="contact" class="map">
-        <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A&amp;output=embed"></iframe>
-        <br />
-        <small>
-            <a href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A"></a>
-        </small>
-        </iframe>
-    </div>
-    <!-- /Map -->
-
-    <!-- Footer -->
-    <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6 col-md-offset-3 text-center">
-                    <ul class="list-inline">
-                        <li><i class="fa fa-facebook fa-3x"></i>
-                        </li>
-                        <li><i class="fa fa-twitter fa-3x"></i>
-                        </li>
-                        <li><i class="fa fa-dribbble fa-3x"></i>
-                        </li>
-                    </ul>
-                    <div class="top-scroll">
-                        <a href="#top"><i class="fa fa-circle-arrow-up scroll fa-4x"></i></a>
-                    </div>
-                    <hr>
-                    <p>Copyright &copy; Company 2013</p>
-                </div>
-            </div>
-        </div>
-    </footer>
-    <!-- /Footer -->
 
     <!-- JavaScript -->
     <script src="js/jquery-1.10.2.js"></script>
