--- a/UserInterface/index.html
+++ b/UserInterface/index.html
@@ -15,6 +15,8 @@
     <!-- Add custom CSS here -->
     <link href="css/stylish-portfolio.css" rel="stylesheet">
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet">
+
+    <!-- Test comment -->
 </head>
 
 <body>
