Image display error fix
Logos were not displaying on the search page due to incorrect
addresses. Fixed.

--- a/UserInterface/search.html
+++ b/UserInterface/search.html
@@ -11,11 +11,11 @@
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
-    <link href="css/search.css" rel="stylesheet">
 
     <!-- Add custom CSS here -->
     <link href="css/stylish-portfolio.css" rel="stylesheet">
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="css/search.css" rel="stylesheet">
 </head>
 
 <body>
@@ -42,10 +42,10 @@
         <div class="vert-text">
             <div class="row">
                 <div class="col-md-2 col-md-offset-4">
-                    <img src="../img/bbc-logo.png">
+                    <img src="img/bbc-logo.png">
                 </div>
                 <div class="col-md-2">
-                    <img src="../img/ucl-logo-transparent-small.png">
+                    <img src="img/ucl-logo-transparent-small.png">
                 </div>
             </div>
             <h1>Politics Mapper</h1>
@@ -203,7 +203,7 @@
                         </div>
                         <div class="col-xs-12 col-md-5">
                             <p class="lead" align="right">
-                                1/10/1998</p>
+                                01/10/1998</p>
                         </div>
                     </div>
                     <p class="group inner list-group-item-text">
