--- a/UserInterface/index.html
+++ b/UserInterface/index.html
@@ -7,6 +7,8 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
+    <link rel="shortcut icon" href="img/favicon.ico">
+
     <title>Politics Mapper</title>
 
     <!-- Bootstrap core CSS -->
