--- a/UserInterface/search.html
+++ b/UserInterface/search.html
@@ -58,7 +58,7 @@
                     <div class="input-group">
                         <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term">
                         <div class="input-group-btn">
-                            <button onclick="location.href='search.html';" class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                            <button onclick="location.href='search.html#results';" class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
                         </div>
                     </div>
                 </div>
