--- a/nodeapp/index.html
+++ b/nodeapp/index.html
@@ -60,7 +60,7 @@
             <div class="row">
                 <div class="col-md-3"></div>
                 <div class="col-md-6">
-                    <form class="input-group" action="search.html#results">
+                    <form class="input-group" action="routes/search.js#results">
                         <input id="search-bar" type="text" name="q" class="form-control" placeholder="Search" onkeydown="if (event.keyCode == 13) document.getElementById('search-button').click()">
                         <div class="input-group-btn">
                             <button id="search-button" onclick="location.href='search.html#results';" class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
