Reverted some changes with jade and html index files

--- a/nodeapp/index.html
+++ b/nodeapp/index.html
@@ -12,11 +12,11 @@
     <title>Politics Mapper</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="../UserInterface/css/bootstrap.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
 
     <!-- Add custom CSS here -->
-    <link href="../UserInterface/css/stylish-portfolio.css" rel="stylesheet">
-    <link href="../UserInterface/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="css/stylish-portfolio.css" rel="stylesheet">
+    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <!-- test -->
 
 </head>
