--- a/nodeapp/public/UserInterface/index.html
+++ b/nodeapp/public/UserInterface/index.html
@@ -7,16 +7,16 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <link rel="shortcut icon" href="UserInterface/img/favicon.ico">
+    <link rel="shortcut icon" href="img/favicon.ico">
 
     <title>Politics Mapper</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="UserInterface/css/bootstrap.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
 
     <!-- Add custom CSS here -->
-    <link href="UserInterface/css/stylish-portfolio.css" rel="stylesheet">
-    <link href="UserInterface/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="css/stylish-portfolio.css" rel="stylesheet">
+    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <!-- test -->
 
 </head>
@@ -49,10 +49,10 @@
         <div class="vert-text">
             <div class="row">
                 <div class="col-md-2 col-md-offset-4">
-                    <img src="UserInterface/img/bbc-logo.png">
+                    <img src="img/bbc-logo.png">
                 </div>
                 <div class="col-md-2">
-                    <img src="UserInterface/img/ucl-logo-transparent-small.png">
+                    <img src="img/ucl-logo-transparent-small.png">
                 </div>
             </div>
             <h1>Politics Mapper</h1>
@@ -60,7 +60,7 @@
             <div class="row">
                 <div class="col-md-3"></div>
                 <div class="col-md-6">
-                    <form class="input-group" action="search#results">
+                    <form class="input-group" action="search.html#results">
                         <input id="search-bar" type="text" name="q" class="form-control" placeholder="Search" onkeydown="if (event.keyCode == 13) document.getElementById('search-button').click()">
                         <div class="input-group-btn">
                             <button id="search-button" onclick="location.href='search.html#results';" class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
@@ -129,7 +129,7 @@
     <!-- Callout -->
     <div class="callout">
         <div class="vert-text">
-            <img src="UserInterface/img/ucl-eng-logo-long-orange.png" width="60%">
+            <img src="img/ucl-eng-logo-long-orange.png" width="60%">
             
         </div>
     </div>
@@ -202,8 +202,8 @@
     <!-- /Call to Action -->
 
     <!-- JavaScript -->
-    <script src="UserInterface/js/jquery-1.10.2.js"></script>
-    <script src="UserInterface/js/bootstrap.js"></script>
+    <script src="js/jquery-1.10.2.js"></script>
+    <script src="js/bootstrap.js"></script>
 
     <!-- Custom JavaScript for the Side Menu and Smooth Scrolling -->
     <script>
