added speakername and text to timeline

--- a/visualizations/index.html
+++ b/visualizations/index.html
@@ -5,12 +5,192 @@
     <!-- BEGIN TimelineJS -->
     <script type="text/javascript" src="http://cdn.knightlab.com/libs/timeline/latest/js/storyjs-embed.js"></script>
     <script>
-
-
+		
+		hits = [
+{
+"_index": "hansard",
+"_type": "debate",
+"_id": "uk.org.publicwhip/debate/1938-07-07a.780.0",
+"_score": 1.3039691,
+"_source": {
+"colnum": "780",
+"hansard_membership_id": "12681",
+"speakername": "Mr. Pritt",
+"content-orig": "\n<p>It is something to have made something clear.</p>\n",
+"content": "It is something to have made something clear.long informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong informationlong information",
+"date": "1938-07-07",
+"tag": "speech",
+"time": "",
+"speakerid": "uk.org.publicwhip/member/19745",
+"id": "uk.org.publicwhip/debate/1938-07-07a.780.0"
+}
+},
+{
+"_index": "hansard",
+"_type": "debate",
+"_id": "uk.org.publicwhip/debate/1960-04-11a.882.4",
+"_score": 1.3039691,
+"_source": {
+"colnum": "882",
+"hansard_membership_id": "6684",
+"speakername": "Mr. Sandys",
+"content-orig": "\n<p>The purpose is not to cover up something but to disclose something to the House.</p>\n",
+"content": "The purpose is not to cover up something but to disclose something to the House.",
+"date": "1960-04-11",
+"tag": "speech",
+"time": "",
+"speakerid": "uk.org.publicwhip/member/29187",
+"id": "uk.org.publicwhip/debate/1960-04-11a.882.4"
+}
+},
+{
+"_index": "hansard",
+"_type": "debate",
+"_id": "uk.org.publicwhip/debate/1949-10-19a.557.1",
+"_score": 1.3039691,
+"_source": {
+"colnum": "557",
+"hansard_membership_id": "12630",
+"speakername": "Mr. Strachey",
+"content-orig": "\n<p>I cannot agree that to say \"Thank you\" for something is to beg for something.</p>\n",
+"content": "I cannot agree that to say \"Thank you\" for something is to beg for something.",
+"date": "1949-10-19",
+"tag": "speech",
+"time": "",
+"speakerid": "uk.org.publicwhip/member/29341",
+"id": "uk.org.publicwhip/debate/1949-10-19a.557.1"
+}
+},
+{
+"_index": "hansard",
+"_type": "debate",
+"_id": "uk.org.publicwhip/debate/1944-03-10a.2446.6",
+"_score": 1.3035499,
+"_source": {
+"colnum": "2446",
+"hansard_membership_id": "8268",
+"speakername": "Sir H. Williams",
+"content-orig": "\n<p>It means that if something is not accepted, something outside will be disturbed.</p>\n",
+"content": "It means that if something is not accepted, something outside will be disturbed.",
+"date": "1944-03-10",
+"tag": "speech",
+"time": "",
+"speakerid": "uk.org.publicwhip/member/29753",
+"id": "uk.org.publicwhip/debate/1944-03-10a.2446.6"
+}
+},
+{
+"_index": "hansard",
+"_type": "debate",
+"_id": "uk.org.publicwhip/debate/1951-07-31a.1269.8",
+"_score": 1.3033447,
+"_source": {
+"colnum": "1269",
+"hansard_membership_id": "12576",
+"speakername": "Mr. Pannell",
+"content-orig": "\n<p>Something the hon. and gallant Gentleman knows something about.</p>\n",
+"content": "Something the hon. and gallant Gentleman knows something about.",
+"date": "1951-07-31",
+"tag": "speech",
+"time": "",
+"speakerid": "uk.org.publicwhip/member/19285",
+"id": "uk.org.publicwhip/debate/1951-07-31a.1269.8"
+}
+},
+{
+"_index": "hansard",
+"_type": "debate",
+"_id": "uk.org.publicwhip/debate/1972-01-25a.1276.1",
+"_score": 1.3033447,
+"_source": {
+"colnum": "1276",
+"hansard_membership_id": "10579",
+"speakername": "Mr. Torney",
+"content-orig": "\n<p>But there is something different, something exceptional, about the trip to London.</p>\n",
+"content": "But there is something different, something exceptional, about the trip to London.",
+"date": "1972-01-25",
+"tag": "speech",
+"time": "",
+"speakerid": "uk.org.publicwhip/member/21455",
+"id": "uk.org.publicwhip/debate/1972-01-25a.1276.1"
+}
+},
+{
+"_index": "hansard",
+"_type": "debate",
+"_id": "uk.org.publicwhip/debate/1961-11-07a.927.0",
+"_score": 1.2902453,
+"_source": {
+"colnum": "927",
+"speakerid": "unknown",
+"speakername": "Hon. Members",
+"content-orig": "\n<p>Say something.</p>\n",
+"content": "Say something.",
+"tag": "speech",
+"time": "",
+"date": "1961-11-07",
+"id": "uk.org.publicwhip/debate/1961-11-07a.927.0"
+}
+},
+{
+"_index": "hansard",
+"_type": "debate",
+"_id": "uk.org.publicwhip/debate/1938-03-01a.1023.6",
+"_score": 1.1179206,
+"_source": {
+"colnum": "1023",
+"hansard_membership_id": "9611",
+"speakername": "Mr. Muff",
+"content-orig": "\n<p>Can the right hon. Gentleman tell us something about the money which was expended upon that most interesting television experiment at Wembley? That is something in which we are interested. If the Assistant Postmaster-General could tell us something, I should be most grateful.</p>\n",
+"content": "Can the right hon. Gentleman tell us something about the money which was expended upon that most interesting television experiment at Wembley? That is something in which we are interested. If the Assistant Postmaster-General could tell us something, I should be most grateful.",
+"date": "1938-03-01",
+"tag": "speech",
+"time": "",
+"speakerid": "uk.org.publicwhip/member/18670",
+"id": "uk.org.publicwhip/debate/1938-03-01a.1023.6"
+}
+},
+{
+"_index": "hansard",
+"_type": "debate",
+"_id": "uk.org.publicwhip/debate/1951-07-31a.1269.9",
+"_score": 1.1179206,
+"_source": {
+"colnum": "1269",
+"hansard_membership_id": "2782",
+"speakername": "Squadron Leader Cooper",
+"content-orig": "\n<p>The hon. Gentleman says it is something I know something about. How right he is. If hon. Members on the other side would address themselves on occasions to subjects of which they knew something the debates in this House would reach a higher standard than they do.</p>\n",
+"content": "The hon. Gentleman says it is something I know something about. How right he is. If hon. Members on the other side would address themselves on occasions to subjects of which they knew something the debates in this House would reach a higher standard than they do.",
+"date": "1951-07-31",
+"tag": "speech",
+"time": "",
+"speakerid": "uk.org.publicwhip/member/32315",
+"id": "uk.org.publicwhip/debate/1951-07-31a.1269.9"
+}
+},
+{
+"_index": "hansard",
+"_type": "debate",
+"_id": "uk.org.publicwhip/debate/1949-06-27a.871.1",
+"_score": 1.1175612,
+"_source": {
+"colnum": "871",
+"hansard_membership_id": "2955",
+"speakername": "Sir S. Cripps",
+"content-orig": "\n<p>No. In the three cases of the footballers in 1941 there was no form of agreement in any of their cases. What I am saying is that a distinction to be drawn here between something which is specifically guaranteed in the contract and something which is not, is something quite unreal.</p>\n",
+"content": "No. In the three cases of the footballers in 1941 there was no form of agreement in any of their cases. What I am saying is that a distinction to be drawn here between something which is specifically guaranteed in the contract and something which is not, is something quite unreal.",
+"date": "1949-06-27",
+"tag": "speech",
+"time": "",
+"speakerid": "uk.org.publicwhip/member/30901",
+"id": "uk.org.publicwhip/debate/1949-06-27a.871.1"
+}
+}
+];
         data = {
             "timeline":
             {
-                "headline":"The Main Timeline Headline Goes here",
+                "headline":"headlinee",
                 "type":"default",
                 "text":"<p>Intro body text goes here, some HTML is ok</p>",
                 "asset": {
@@ -23,8 +203,7 @@
                         "startDate":"2011,12,10",
                         "endDate":"2011,12,11",
                         "headline":"Headline Goes Here",
-                        "text":"<p>Body text goes here, some HTML is OK</p>",
-                        "tag":"This is Optional",
+                        "text":"<p>Body text goes here, some HTML is OK</p>",                       
                         "classname":"optionaluniqueclassnamecanbeaddedhere",
                         "asset": {
                             "media":"http://twitter.com/ArjunaSoriano/status/164181156147900416",
@@ -46,17 +225,31 @@
 
             }
         }
-        /*
-        dates = []
-        for each hit in hits:
-            dates.append(hit.date)
-        data["timline"]["date"] = dates
-        */
+		
+		var regex = new RegExp("-", 'gi');
+		for (var i = 0; i < hits.length; i++) {
+			//alert(hits[i]["_source"]["content"]);
+			//alert(data["timeline"]["date"]);
+			var dateString = hits[i]["_source"]["date"];
+			var contentString = hits[i]["_source"]["content"];
+			var speakerNameString = hits[i]["_source"]["speakername"];
+			var dateList = data["timeline"]["date"];
+			
+			var newDate = new Object();
+			newDate.startDate = dateString.replace(regex, ",");
+			newDate.text = contentString;
+			newDate.headline = speakerNameString;
+			dateList.push(newDate);
+			
+			
+			
+		}
+        
         $(document).ready(function() {
             createStoryJS({
                 type:       'timeline',
-                width:      '800',
-                height:     '600',
+                width:      '900',
+                height:     '700',
                 source:     data,
                 embed_id:   'my-timeline'
             });
