--- a/nodeapp/index.html
+++ b/nodeapp/index.html
@@ -28,7 +28,7 @@
     <div id="sidebar-wrapper">
         <ul class="sidebar-nav">
             <a id="menu-close" href="#" class="btn btn-default btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
-            <li class="sidebar-brand"><a href="index.html">Politics Mapper</a>
+            <li class="sidebar-brand"><a href="/">Politics Mapper</a>
             </li>
             <li><a href="#top">Home</a>
             </li>
