Major improvement to Project Report including layout for all pages, completed requirements and timeline structure.

--- a/ProjectReport/index.html
+++ b/ProjectReport/index.html
@@ -13,6 +13,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="css/cover.css" rel="stylesheet">
@@ -29,10 +30,13 @@
 
           <div class="inner cover">
             <h1 class="cover-heading">Politics Mapper</h1>
-            <p class="lead">The Houses of Parliament search engine<br>This is our report</p>
+            <p class="lead">The Houses of Parliament search engine<br>This is our report and video</p>
             <p class="lead">
               <a href="/main.html" class="btn btn-lg btn-primary">
                 <span class="glyphicon glyphicon-book"></span>
+              </a>
+              <a href="http://youtu.be/fHdSRWKLzYQ" class="btn btn-lg btn-warning">
+                <span class="glyphicon glyphicon-film"></span>
               </a>
             </p>
           </div>
