--- a/ProjectReport/management.html
+++ b/ProjectReport/management.html
@@ -8,7 +8,7 @@
 	<meta name="author" content="">
 	<link rel="shortcut icon" href="img/favicon.ico">
 
-	<title>Home - Politics Mapper</title>
+	<title>Management - Politics Mapper</title>
 
 	<!-- Bootstrap core CSS -->
 	<link href="bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -31,7 +31,7 @@
 	  </div>
 	  <div class="navbar-collapse collapse navbar-inverse-collapse">
 		<ul class="nav navbar-nav">
-		  <li class="active"><a href="/main.html#">Home</a></li>
+		  <li><a href="/main.html#">Home</a></li>
 		  <li class="dropdown">
 			<a href="#" class="dropdown-toggle" data-toggle="dropdown">Requirements <b class="caret"></b></a>
 			<ul class="dropdown-menu">
@@ -52,7 +52,7 @@
 			  <li><a href="/dev.html#testing">Testing and Evaluation</a></li>
 			</ul>
 		  </li>
-		  <li class="dropdown">
+		  <li class="dropdown active">
 			<a href="#" class="dropdown-toggle" data-toggle="dropdown">Project Management <b class="caret"></b></a>
 			<ul class="dropdown-menu">
 			  <li><a href="/management.html#">Introduction</a></li>
@@ -76,7 +76,7 @@
 		  <li><a href="http://youtu.be/fHdSRWKLzYQ" class="btn btn-lg">
                 <span class="glyphicon glyphicon-film"></span>
               </a></li>
-		  
+              
 		</ul>
 		<ul class="nav navbar-nav navbar-right">
 		  <li><a href="http://politicsmapper.boards.net">Forum</a></li>
@@ -92,37 +92,37 @@
 	  </div>
 	</div>
 
-	<!-- Heading -->
+	<!-- Content -->
 	<div class="container">
 		<div class="row">
 		    <div class="col-lg-12">
 		    	<div class="page-header" id="banner">
-			      	<h1 class="title">Politics Mapper</h1>
-			      	<p class="lead">Welcome to Team 14's Project Report</p>
+			      	<h1 class="title">Management</h1>
+			      	<p class="lead">By Team 14</p>
 		    	</div>
 		    </div>
 	    </div>
 	    <div class="row">
 		    <div class="well well-sm col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2" style="text-align: center;">
-			    <h1> What is Politics Mapper? </h1>
-			    <p>Politics Mapper is a tool to be used by journalists and researchers, as well as the general public, for finding out more about what is said in the Houses of Parliament.<br>Politics Mapper is accessible via the web app at <a href="politicsmapper.cloudapp.net">www.politicsmapper.cloudapp.net</a></p>
+			    <h1>Introduction</h1>
+			    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur accumsan nec quam non fringilla. Phasellus nec consectetur nisi. Suspendisse sed nisi laoreet, condimentum mauris vitae, elementum felis. Cras mollis magna placerat ante porttitor semper. In at molestie sem. Phasellus nec enim mi. Pellentesque facilisis aliquet nulla, eget feugiat magna fringilla eu. Donec posuere ligula vitae est fringilla dapibus.</p>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-lg-11">
-				<h2>Query search</h2>
+				<h2>Title 1</h2>
 				<p>Want to know what politicians think about a particular topic? Looking for a specific transcript? Politics Mapper is the place for you!<br>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur accumsan nec quam non fringilla. Phasellus nec consectetur nisi. Suspendisse sed nisi laoreet, condimentum mauris vitae, elementum felis. Cras mollis magna placerat ante porttitor semper. In at molestie sem. Phasellus nec enim mi. Pellentesque facilisis aliquet nulla, eget feugiat magna fringilla eu. Donec posuere ligula vitae est fringilla dapibus.<br>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Fusce erat ligula, venenatis eget bibendum nec, viverra interdum purus. Nulla nec ipsum eget augue interdum faucibus. Praesent feugiat dui ac odio eleifend semper. Mauris vestibulum lectus ut tortor lacinia consequat. Cras vulputate posuere pretium. Vestibulum faucibus tincidunt facilisis. Curabitur bibendum ultricies nisl, id tristique urna congue et. Suspendisse eget consequat odio. Fusce ornare nulla et lorem interdum ultricies et eu erat. In aliquam vestibulum neque et tincidunt. Suspendisse elementum sapien quis dictum viverra. Suspendisse eget lorem auctor, lacinia arcu ut, volutpat dui. Sed ornare lectus sapien.
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-lg-11 col-lg-offset-1">
-				<h2 style="text-align: right;">Similarity search</h2>
+				<h2 style="text-align: right;">Title 2</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur accumsan nec quam non fringilla. Phasellus nec consectetur nisi. Suspendisse sed nisi laoreet, condimentum mauris vitae, elementum felis. Cras mollis magna placerat ante porttitor semper. In at molestie sem. Phasellus nec enim mi. Pellentesque facilisis aliquet nulla, eget feugiat magna fringilla eu. Donec posuere ligula vitae est fringilla dapibus.<br>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Fusce erat ligula, venenatis eget bibendum nec, viverra interdum purus. Nulla nec ipsum eget augue interdum faucibus. Praesent feugiat dui ac odio eleifend semper. Mauris vestibulum lectus ut tortor lacinia consequat. Cras vulputate posuere pretium. Vestibulum faucibus tincidunt facilisis. Curabitur bibendum ultricies nisl, id tristique urna congue et. Suspendisse eget consequat odio. Fusce ornare nulla et lorem interdum ultricies et eu erat. In aliquam vestibulum neque et tincidunt. Suspendisse elementum sapien quis dictum viverra. Suspendisse eget lorem auctor, lacinia arcu ut, volutpat dui. Sed ornare lectus sapien.
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-lg-11">
-				<h2>Accessible API</h2>
+				<h2>Title 3</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur accumsan nec quam non fringilla. Phasellus nec consectetur nisi. Suspendisse sed nisi laoreet, condimentum mauris vitae, elementum felis. Cras mollis magna placerat ante porttitor semper. In at molestie sem. Phasellus nec enim mi. Pellentesque facilisis aliquet nulla, eget feugiat magna fringilla eu. Donec posuere ligula vitae est fringilla dapibus.<br>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Fusce erat ligula, venenatis eget bibendum nec, viverra interdum purus. Nulla nec ipsum eget augue interdum faucibus. Praesent feugiat dui ac odio eleifend semper. Mauris vestibulum lectus ut tortor lacinia consequat. Cras vulputate posuere pretium. Vestibulum faucibus tincidunt facilisis. Curabitur bibendum ultricies nisl, id tristique urna congue et. Suspendisse eget consequat odio. Fusce ornare nulla et lorem interdum ultricies et eu erat. In aliquam vestibulum neque et tincidunt. Suspendisse elementum sapien quis dictum viverra. Suspendisse eget lorem auctor, lacinia arcu ut, volutpat dui. Sed ornare lectus sapien.
 			</div>
 		</div>
