--- a/ProjectReport/usability.html
+++ b/ProjectReport/usability.html
@@ -31,7 +31,7 @@
 	  </div>
 	  <div class="navbar-collapse collapse navbar-inverse-collapse">
 		<ul class="nav navbar-nav">
-		  <li class="active"><a href="/main.html#">Home</a></li>
+		  <li><a href="/main.html#">Home</a></li>
 		  <li class="dropdown">
 			<a href="#" class="dropdown-toggle" data-toggle="dropdown">Requirements <b class="caret"></b></a>
 			<ul class="dropdown-menu">
@@ -64,7 +64,7 @@
 			  <li><a href="/management.html#esben">Esben Sörig</a></li>
 			</ul>
 		  </li>
-		  <li class="dropdown">
+		  <li class="dropdown active">
 			<a href="#" class="dropdown-toggle" data-toggle="dropdown">Usability <b class="caret"></b></a>
 			<ul class="dropdown-menu">
 			  <li><a href="/usability.html#">Introduction</a></li>
@@ -105,7 +105,7 @@
 	    <div class="row">
 		    <div class="well well-sm col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2" style="text-align: center;">
 			    <h1> What is Politics Mapper? </h1>
-			    <p>Politics Mapper is a tool to be used by journalists and researchers, as well as the general public, for finding out more about what is said in the Houses of Parliament.<br>Politics Mapper is accessible via the web app at <a href="politicsmapper.cloudapp.net">www.politicsmapper.cloudapp.net</a></p>
+			    <p>Politics Mapper is a tool to be used by journalists and researchers, as well as the general public, for finding out more about what is said in the Houses of Parliament.<br>Politics Mapper is accessible via the web app at <a href="politicsmapper.cloudapp.net">www.politicsmapper.cloudapp.net</a> and our publicly accessible API.</p>
 			</div>
 		</div>
 		<div class="row">
