--- a/ProjectReport/main.html
+++ b/ProjectReport/main.html
@@ -112,7 +112,7 @@
 			<div class="col-lg-11">
 				<h2>Query search</h2>
 				<div class="col-lg-11 col-lg-offset-1">
-					<p>Want to know what politicians think about a particular topic? Looking for a specific transcript? Politics Mapper is the place for you!<br>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur accumsan nec quam non fringilla. Phasellus nec consectetur nisi. Suspendisse sed nisi laoreet, condimentum mauris vitae, elementum felis. Cras mollis magna placerat ante porttitor semper. In at molestie sem. Phasellus nec enim mi. Pellentesque facilisis aliquet nulla, eget feugiat magna fringilla eu. Donec posuere ligula vitae est fringilla dapibus.<br>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Fusce erat ligula, venenatis eget bibendum nec, viverra interdum purus. Nulla nec ipsum eget augue interdum faucibus. Praesent feugiat dui ac odio eleifend semper. Mauris vestibulum lectus ut tortor lacinia consequat. Cras vulputate posuere pretium. Vestibulum faucibus tincidunt facilisis. Curabitur bibendum ultricies nisl, id tristique urna congue et. Suspendisse eget consequat odio. Fusce ornare nulla et lorem interdum ultricies et eu erat. In aliquam vestibulum neque et tincidunt. Suspendisse elementum sapien quis dictum viverra. Suspendisse eget lorem auctor, lacinia arcu ut, volutpat dui. Sed ornare lectus sapien.</p>
+					<p>Want to know what politicians think about a particular topic? Looking for a specific transcript? Politics Mapper is the tool for you! Our standard search mechanism allows user to type in any query of their choosing and view the findings of that search in mere milliseconds. Political knowledge could not be accessed simpler or easier!</p>
 				</div>
 			</div>
 		</div>
@@ -120,7 +120,7 @@
 			<div class="col-lg-11">
 				<h2>Similarity search</h2>
 				<div class="col-lg-11 col-lg-offset-1">
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur accumsan nec quam non fringilla. Phasellus nec consectetur nisi. Suspendisse sed nisi laoreet, condimentum mauris vitae, elementum felis. Cras mollis magna placerat ante porttitor semper. In at molestie sem. Phasellus nec enim mi. Pellentesque facilisis aliquet nulla, eget feugiat magna fringilla eu. Donec posuere ligula vitae est fringilla dapibus.<br>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Fusce erat ligula, venenatis eget bibendum nec, viverra interdum purus. Nulla nec ipsum eget augue interdum faucibus. Praesent feugiat dui ac odio eleifend semper. Mauris vestibulum lectus ut tortor lacinia consequat. Cras vulputate posuere pretium. Vestibulum faucibus tincidunt facilisis. Curabitur bibendum ultricies nisl, id tristique urna congue et. Suspendisse eget consequat odio. Fusce ornare nulla et lorem interdum ultricies et eu erat. In aliquam vestibulum neque et tincidunt. Suspendisse elementum sapien quis dictum viverra. Suspendisse eget lorem auctor, lacinia arcu ut, volutpat dui. Sed ornare lectus sapien.</p>
+					<p>Politics Mapper's defining characteristic is, indubitably, its similarity search; this function allows users to search for other records from the Houses of Parliament which are similar to another record of their choosing. This is a must-have tool for journalists looking to collect multiple records on the same topic or, even, numerous transcripts from a single politician without having to repeatedly formulate queries.</p>
 				</div>
 			</div>
 		</div>
@@ -128,7 +128,7 @@
 			<div class="col-lg-11">
 				<h2>Accessible API</h2>
 				<div class="col-lg-11 col-lg-offset-1">
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur accumsan nec quam non fringilla. Phasellus nec consectetur nisi. Suspendisse sed nisi laoreet, condimentum mauris vitae, elementum felis. Cras mollis magna placerat ante porttitor semper. In at molestie sem. Phasellus nec enim mi. Pellentesque facilisis aliquet nulla, eget feugiat magna fringilla eu. Donec posuere ligula vitae est fringilla dapibus.<br>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Fusce erat ligula, venenatis eget bibendum nec, viverra interdum purus. Nulla nec ipsum eget augue interdum faucibus. Praesent feugiat dui ac odio eleifend semper. Mauris vestibulum lectus ut tortor lacinia consequat. Cras vulputate posuere pretium. Vestibulum faucibus tincidunt facilisis. Curabitur bibendum ultricies nisl, id tristique urna congue et. Suspendisse eget consequat odio. Fusce ornare nulla et lorem interdum ultricies et eu erat. In aliquam vestibulum neque et tincidunt. Suspendisse elementum sapien quis dictum viverra. Suspendisse eget lorem auctor, lacinia arcu ut, volutpat dui. Sed ornare lectus sapien.</p>
+					<p>Are you a developer wanting to utilise our innovative data retrieval solution? If so, look no further! Our easy-to-use API comes direct from ElasticSearch itself, offering all the functionality of the querying and similarity mechanisms. Collaboration could not be simpler!</p>
 				</div>
 			</div>
 		</div>
