--- a/ProjectReport/management.html
+++ b/ProjectReport/management.html
@@ -105,7 +105,7 @@
 	    <div class="row">
 		    <div class="well well-sm col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2" style="text-align: center;">
 			    <h1>Introduction</h1>
-			    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur accumsan nec quam non fringilla. Phasellus nec consectetur nisi. Suspendisse sed nisi laoreet, condimentum mauris vitae, elementum felis. Cras mollis magna placerat ante porttitor semper. In at molestie sem. Phasellus nec enim mi. Pellentesque facilisis aliquet nulla, eget feugiat magna fringilla eu. Donec posuere ligula vitae est fringilla dapibus.</p>
+			    <p>The ability to manage the project was essential in the development of Politics Mapper; we had to keep in contact with our clients, requesting feedback, whilst also organising ourselves and delegating team members in an effective, efficient manner. This section of our report details the delegation of work and the management roles of each team member.</p>
 			</div>
 		</div>
 		<div class="row" id="management">
