--- a/ProjectReport/manuals.html
+++ b/ProjectReport/manuals.html
@@ -110,20 +110,57 @@
 		</div>
 		<div class="row">
 			<div class="col-lg-11">
-				<h2>Title 1</h2>
-				<p>Want to know what politicians think about a particular topic? Looking for a specific transcript? Politics Mapper is the place for you!<br>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur accumsan nec quam non fringilla. Phasellus nec consectetur nisi. Suspendisse sed nisi laoreet, condimentum mauris vitae, elementum felis. Cras mollis magna placerat ante porttitor semper. In at molestie sem. Phasellus nec enim mi. Pellentesque facilisis aliquet nulla, eget feugiat magna fringilla eu. Donec posuere ligula vitae est fringilla dapibus.<br>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Fusce erat ligula, venenatis eget bibendum nec, viverra interdum purus. Nulla nec ipsum eget augue interdum faucibus. Praesent feugiat dui ac odio eleifend semper. Mauris vestibulum lectus ut tortor lacinia consequat. Cras vulputate posuere pretium. Vestibulum faucibus tincidunt facilisis. Curabitur bibendum ultricies nisl, id tristique urna congue et. Suspendisse eget consequat odio. Fusce ornare nulla et lorem interdum ultricies et eu erat. In aliquam vestibulum neque et tincidunt. Suspendisse elementum sapien quis dictum viverra. Suspendisse eget lorem auctor, lacinia arcu ut, volutpat dui. Sed ornare lectus sapien.
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-lg-11 col-lg-offset-1">
-				<h2 style="text-align: right;">Title 2</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur accumsan nec quam non fringilla. Phasellus nec consectetur nisi. Suspendisse sed nisi laoreet, condimentum mauris vitae, elementum felis. Cras mollis magna placerat ante porttitor semper. In at molestie sem. Phasellus nec enim mi. Pellentesque facilisis aliquet nulla, eget feugiat magna fringilla eu. Donec posuere ligula vitae est fringilla dapibus.<br>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Fusce erat ligula, venenatis eget bibendum nec, viverra interdum purus. Nulla nec ipsum eget augue interdum faucibus. Praesent feugiat dui ac odio eleifend semper. Mauris vestibulum lectus ut tortor lacinia consequat. Cras vulputate posuere pretium. Vestibulum faucibus tincidunt facilisis. Curabitur bibendum ultricies nisl, id tristique urna congue et. Suspendisse eget consequat odio. Fusce ornare nulla et lorem interdum ultricies et eu erat. In aliquam vestibulum neque et tincidunt. Suspendisse elementum sapien quis dictum viverra. Suspendisse eget lorem auctor, lacinia arcu ut, volutpat dui. Sed ornare lectus sapien.
+				<h2>System Manual</h2>
+				<div class="col-lg-11 col-lg-offset-1">
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur accumsan nec quam non fringilla. Phasellus nec consectetur nisi. Suspendisse sed nisi laoreet, condimentum mauris vitae, elementum felis. Cras mollis magna placerat ante porttitor semper. In at molestie sem. Phasellus nec enim mi. Pellentesque facilisis aliquet nulla, eget feugiat magna fringilla eu. Donec posuere ligula vitae est fringilla dapibus.<br>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Fusce erat ligula, venenatis eget bibendum nec, viverra interdum purus. Nulla nec ipsum eget augue interdum faucibus. Praesent feugiat dui ac odio eleifend semper. Mauris vestibulum lectus ut tortor lacinia consequat. Cras vulputate posuere pretium. Vestibulum faucibus tincidunt facilisis. Curabitur bibendum ultricies nisl, id tristique urna congue et. Suspendisse eget consequat odio. Fusce ornare nulla et lorem interdum ultricies et eu erat. In aliquam vestibulum neque et tincidunt. Suspendisse elementum sapien quis dictum viverra. Suspendisse eget lorem auctor, lacinia arcu ut, volutpat dui. Sed ornare lectus sapien.</p>
+				</div>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-lg-11">
-				<h2>Title 3</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur accumsan nec quam non fringilla. Phasellus nec consectetur nisi. Suspendisse sed nisi laoreet, condimentum mauris vitae, elementum felis. Cras mollis magna placerat ante porttitor semper. In at molestie sem. Phasellus nec enim mi. Pellentesque facilisis aliquet nulla, eget feugiat magna fringilla eu. Donec posuere ligula vitae est fringilla dapibus.<br>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Fusce erat ligula, venenatis eget bibendum nec, viverra interdum purus. Nulla nec ipsum eget augue interdum faucibus. Praesent feugiat dui ac odio eleifend semper. Mauris vestibulum lectus ut tortor lacinia consequat. Cras vulputate posuere pretium. Vestibulum faucibus tincidunt facilisis. Curabitur bibendum ultricies nisl, id tristique urna congue et. Suspendisse eget consequat odio. Fusce ornare nulla et lorem interdum ultricies et eu erat. In aliquam vestibulum neque et tincidunt. Suspendisse elementum sapien quis dictum viverra. Suspendisse eget lorem auctor, lacinia arcu ut, volutpat dui. Sed ornare lectus sapien.
+				<h2>User Manual</h2>
+				<div class="col-lg-11 col-lg-offset-1">
+					<h3>Welcome to the Politics Mapper Homepage!</h3>
+					<div class="col-lg-11 col-lg-offset-1">
+						<img src="img/homepage.png" class="img-responsive">
+						<p>On this page, you have several options:</p>
+						<ul>
+							<li>You may wish to query the Hansard database</li>
+							<li>You may wish to read further information about the website</li>
+							<li>You may wish to navigate through the homepage through the navigation menu</li>
+						</ul>
+					</div>
+					<h3>Homepage Features</h3>
+					<div class="col-lg-11 col-lg-offset-1">
+						<img src="img/homefeatures.png" class="img-responsive">
+						<p>You may manually scroll down the homepage to read further information such as our team description and website description.<br>Clicking on the navigation icon on the top right corner will give you the menu on the right hand side, where you can navigate through each section of the homepage more easily.</p>
+					</div>
+					<h3>Query our Hansard Database</h3>
+					<div class="col-lg-11 col-lg-offset-1">
+						<img src="img/homequery.png" class="img-responsive">
+						<p>In order to make a search on the Hansard database, you must first click on the search bar. You may then type in your query.<br>The above example illustrates a user searching for debates relevant to the topic of "unemployment".<br>After the query has been typed in, press the Return key or click on the search icon. </p>
+					</div>
+					<h3>View Search Results</h3>
+					<div class="col-lg-11 col-lg-offset-1">
+						<img src="img/searchresults.png" class="img-responsive">
+						<p>After pressing the Return key or clicking on the search icon, a search results page will be displayed. The results are displayed in a list format and are ordered from best to worst match in relation to your query.<br>On the search results page, you will see each result containing the speaker’s name on the top left corner, the date of the debate on the top right corner and a sample of the text as the main text.<br>You now have two options:</p>
+						<ul>
+							<li>You may click on “View” to view the full text</li>
+							<li>You may click on “Similar” to view other additional texts related to the current text</li>
+						</ul>
+					</div>
+					<h3>Viewing a Record</h3>
+					<div class="col-lg-11 col-lg-offset-1">
+						<img src="img/viewrecord.png" class="img-responsive">
+						<p>After clicking the “View” option, the system will display to you the full text. This text will contain the previous and next paragraphs of the debate to show he context of that record.</p>
+					</div>
+					<h3>Searching for Similar Records</h3>
+					<div class="col-lg-11 col-lg-offset-1">
+						<img src="img/searchsimilar.png" class="img-responsive">
+						<p>Alternatively, you may have wished to search similar results by going on the “Similar” option, in which case the system will display to you another set of results that are semantically similar.</p>
+					</div>
+
+				</div>
 			</div>
 		</div>
     </div>
